client in game interface now fully functional. UI Skeleton complete!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JoinGameActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".inGameServerActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".NewGameActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity"
+        <activity android:name=".inGameClientActivity"></activity>
+        <activity
+            android:name=".JoinGameActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".inGameServerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".NewGameActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
