inGameClientScreen now only works on portrait

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".inGameClientActivity"></activity>
+        <activity android:name=".inGameClientActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".JoinGameActivity"
             android:screenOrientation="portrait" />
